<resources>
    <string name="app_name">玩Kotlin</string>

    <string name="check_version_fail">检查新版本失败，请稍后重试</string>
    <string name="check_version_ing">正在检查，请稍候...</string>
    <string name="check_no_version">当前已是最新版本了</string>
    <string name="empty_view_hint">暂无数据</string>
    <string name="error_view_hint">加载失败</string>
    <string name="no_network_view_hint">网络异常</string>
    <string name="network_unavailable_tip">网络连接不可用，请检查网络设置</string>
    <string name="home">首页</string>
    <string name="knowledge_system">知识体系</string>
    <string name="wechat">公众号</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>
    <string name="nav_my_collect">收藏</string>
    <string name="nav_todo">TODO工具</string>
    <string name="nav_night_mode">夜间模式</string>
    <string name="nav_setting">设置</string>
    <string name="nav_about_us">关于我们</string>
    <string name="nav_logout">退出登录</string>
    <string name="login">登录</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login_tint">请先登录</string>
    <string name="confirm_logout">确认退出登录？</string>
    <string name="logout_ing">正在退出登录</string>
    <string name="logout_success">已退出登录</string>
    <string name="action_search">搜索</string>
    <string name="exit_tip">再按一次退出程序</string>
    <string name="top_tip">置顶</string>
    <string name="new_fresh">新</string>
    <string name="no_network">网络异常</string>
    <string name="no_data">暂无数据</string>
    <string name="collect_success">收藏成功</string>
    <string name="cancel_collect_success">已取消收藏</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="no_account">没有账号？去注册</string>
    <string name="enter_password_again">确认密码</string>
    <string name="register">注册</string>
    <string name="have_account">已有账号？去登录</string>
    <string name="username_not_empty">用户名不能为空</string>
    <string name="password_not_empty">密码不能为空</string>
    <string name="login_ing">登录中...</string>
    <string name="login_success">登录成功</string>
    <string name="register_ing">注册中</string>
    <string name="register_success">注册成功</string>
    <string name="repassword_not_empty">确认密码不能为空</string>
    <string name="password_can_not_match">确认密码和密码不一致</string>
    <string name="action_share">分享</string>
    <string name="action_like">收藏</string>
    <string name="action_browser">用浏览器打开</string>
    <string name="share_article_url">%1$s分享【%2$s】：%3$s</string>
    <string name="collect">收藏</string>
    <string name="edit">编辑</string>
    <string name="add">新增</string>
    <string name="see">查看</string>
    <string name="todo">待办</string>
    <string name="completed">已完成</string>
    <string name="mark_done">标为已完成</string>
    <string name="delete">删除</string>
    <string name="restore">复原</string>
    <string name="confirm_delete">确认删除？</string>
    <string name="delete_success">删除成功</string>
    <string name="title">标题:</string>
    <string name="save">保存</string>
    <string name="compulsory">必填</string>
    <string name="non_compulsory">非必填</string>
    <string name="date">日期:</string>
    <string name="save_ing">保存中...</string>
    <string name="save_success">保存成功</string>
</resources>
