<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/dp_1"
    app:cardElevation="@dimen/dp_1"
    >
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/item_content_padding"
        android:paddingRight="@dimen/item_content_padding"
        android:paddingBottom="@dimen/item_content_padding"
        >
        <TextView
            android:id="@+id/tv_article_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@drawable/bg_fresh"
            android:paddingLeft="@dimen/dp_4"
            android:paddingTop="@dimen/dp_2"
            android:paddingRight="@dimen/dp_4"
            android:paddingBottom="@dimen/dp_2"
            android:text="@string/top_tip"
            android:textColor="@color/Red"
            android:textSize="@dimen/sp_10"
            android:visibility="gone"
            tools:visibility="visible"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_article_fresh"
            android:background="@drawable/bg_fresh"
            app:layout_constraintLeft_toRightOf="@+id/tv_article_top"
            android:layout_marginLeft="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_4"
            android:paddingTop="@dimen/dp_2"
            android:paddingRight="@dimen/dp_4"
            android:paddingBottom="@dimen/dp_2"
            android:text="@string/new_fresh"
            android:textColor="@color/Red"
            android:textSize="@dimen/sp_10"
            android:visibility="gone"
            tools:visibility="visible"
            />
        <TextView
            android:id="@+id/tv_article_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/tv_article_fresh"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@drawable/bg_tag"
            android:paddingLeft="@dimen/dp_4"
            android:paddingTop="@dimen/dp_2"
            android:paddingRight="@dimen/dp_4"
            android:paddingBottom="@dimen/dp_2"
            android:text="@string/app_name"
            android:textColor="@color/item_tag"
            android:textSize="@dimen/sp_10"
            android:visibility="gone"
            tools:visibility="visible"
            />
        <TextView
            android:id="@+id/tv_article_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_article_top"
            app:layout_constraintLeft_toRightOf="@+id/tv_article_tag"
            android:layout_marginLeft="@dimen/dp_10"
            android:textColor="@color/item_author"
            android:text="@string/app_name"
            android:textSize="@dimen/sp_12"
            />
        <TextView
            android:id="@+id/tv_article_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_article_top"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/item_date"
            android:textSize="@dimen/sp_12"
            android:text="@string/app_name"
            />
        <ImageView
            android:id="@+id/tv_article_thumbnail"
            android:layout_width="@dimen/item_img_width"
            android:layout_height="@dimen/item_img_height"
            app:layout_constraintTop_toBottomOf="@+id/tv_article_author"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_8"
            android:scaleType="centerCrop"
            />
        <TextView
            android:id="@+id/tv_article_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_article_author"
            app:layout_constraintLeft_toRightOf="@+id/tv_article_thumbnail"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_8"
            />
        <TextView
            android:id="@+id/tv_article_chapterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_article_title"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            app:layout_constraintLeft_toRightOf="@+id/tv_article_thumbnail"
            android:gravity="center"
            android:textColor="@color/item_chapter"
            android:textSize="@dimen/item_tv_tag"
            tools:text="@string/app_name"
            />
        <ImageView
            android:id="@+id/iv_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat = "@drawable/ic_like"
            />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>